--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,8 +15,8 @@
     	<ul>
         	
             <li><a <%= link_to "PROFILES", :controller => :pages, :action => :profiles  %></a></li>
-            <li><a href="http://localhost:3000/posts">BLOG</a></li>
-            <li><a href="http://localhost:3000/pages/contact">CONTACT US</a></li>
+            <li><a <%= link_to "BLOG", :controller => :posts, :action => :index</a></li>
+            <li><a <%= link_to "CONTACT US", :controller => :pages, :action => :contact</a></li>
         </ul>
     </div>
    
