--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,7 @@
         	
             <li><a <%= link_to "PROFILES", :controller => :pages, :action => :profiles  %></a></li>
             <li><a <%= link_to "BLOG", :controller => :posts, :action => :index %></a></li>
-            <li><a <%= link_to "CONTACT US", :controller => :pages, :action => :contact5%></a></li>
+            <li><a <%= link_to "CONTACT US", :controller => :pages, :action => :contact%></a></li>
         </ul>
     </div>
    
