--- a/app/views/pages/profiles.html.erb
+++ b/app/views/pages/profiles.html.erb
@@ -14,13 +14,13 @@
     <div class="mainMenu">
     	<ul>
         	
-            <li><a href="http://localhost:3000/pages/hussien">Hussien Kamal</a></li><br>
-            <li><a href="http://localhost:3000/pages/nageeb">Ahmed Naguib</a></li><br>
-            <li><a href="http://localhost:3000/pages/omar">Omar Hesham</a></li><br>
-            <li><a href="http://localhost:3000/pages/monica">Monica Gamal</a></li><br>
-            <li><a href="http://localhost:3000/pages/bergitte">Bergitte Saeed</a></li><br>
-            <li><a href="http://localhost:3000/pages/jirayr">Jirayr Vahe </a></li><br>
-            <li><a href="http://localhost:3000/pages/mariam">Mariam Afifi</a></li><br>
+            <li><a <%= link_to "Hussien Kamal", :controller => :pages, :action => :hussien  %></a></li><br>
+            <li><a <%= link_to "Ahmed Nageeb", :controller => :pages, :action => :nageeb  %></a></li><br>
+            <li><a <%= link_to "Omar Hesham", :controller => :pages, :action => :omar  %></a></li><br>
+            <li><a <%= link_to "Monica Gamal", :controller => :pages, :action => :monica  %></a></li><br>
+            <li><a <%= link_to "Bergitte Saeed", :controller => :pages, :action => :bergitte  %></a></li><br>
+            <li><a <%= link_to "Jirayr Vahe", :controller => :pages, :action => :jirayr  %></a></li><br>
+            <li><a <%= link_to "PROFILES", :controller => :pages, :action => :mariam  %></a></li><br>
         </ul>
     </div>
       
