--- a/app/views/pages/profiles.html.erb
+++ b/app/views/pages/profiles.html.erb
@@ -20,7 +20,7 @@
             <li><a <%= link_to "Monica Gamal", :controller => :pages, :action => :monica  %></a></li><br>
             <li><a <%= link_to "Bergitte Saeed", :controller => :pages, :action => :bergitte  %></a></li><br>
             <li><a <%= link_to "Jirayr Vahe", :controller => :pages, :action => :jirayr  %></a></li><br>
-            <li><a <%= link_to "PROFILES", :controller => :pages, :action => :mariam  %></a></li><br>
+            <li><a <%= link_to "Mariam Afifi", :controller => :pages, :action => :mariam  %></a></li><br>
         </ul>
     </div>
       
